--- a/html/student-management.html
+++ b/html/student-management.html
@@ -278,7 +278,7 @@
                                 <button class="tablinks" data-tab="in-progress">In Progress</button>
                                 <button class="tablinks" data-tab="paid">Paid</button>
                                 <button class="tablinks" data-tab="cas">Cas/T20</button>
-                                <button class="tablinks" data-tab="visa">Visa</button>
+                                <button class="tablinks" data-tab="visa">Visa Rejected</button>
                                 <button class="tablinks" data-tab="visa-accepted">Visa Accepted</button>
                                 <button class="tablinks" data-tab="close">Close</button>
                             </div>
@@ -445,13 +445,21 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                    <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
+                                                    
 
                                                 </td>
                                                 <td>
@@ -519,13 +527,20 @@
                                                         </button>
 
                                                 </td>
-                                                <td class="text-center"><button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center">
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                                 <td>
@@ -790,13 +805,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -985,13 +1007,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -1071,13 +1100,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -1258,13 +1294,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -1445,13 +1488,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -1632,13 +1682,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -1819,13 +1876,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -2006,13 +2070,20 @@
                                                     </button>
 
                                                 </td>
-                                                <td class="text-center"> <button type="button"
-                                                        class="btn btn-primary btn-xs edit-btn" data-bs-toggle="modal"
+                                                <td class="text-center"> 
+                                                      <button type="button"
+                                                        class="btn btn-primary btn-xs edit-btn toolpit-btn" data-bs-toggle="modal"
                                                         data-bs-target="#followUp" title="FollowUp"
                                                         data-toggle="tooltip">
                                                         FollowUp
+                                                        <div class="toolpit-div">
+                                                           <div class="toolpit-text">
+                                                            <div class="arrow-down"></div>
+                                                            <h3>10/15/2024</h3>
+                                                            <p>Lorem ipsum dolor sit amet.</p>
+                                                           </div>
+                                                        </div>
                                                     </button>
-
 
                                                 </td>
                                             </tr>
@@ -2564,14 +2635,14 @@
                                             <input type="date" class="form-control name" name="address" value=""
                                                 placeholder="Enter address" readonly="">
                                         </div>
-                                        <div class="col-lg-3 mb-3">
+                                        <!-- <div class="col-lg-3 mb-3">
                                             <label class="control-label col-sm-5 "
                                                 style="width: fit-content; white-space: nowrap;"> Next Follow Up</label>
                                             <input type="date" class="form-control name" name="address" value=""
                                                 placeholder="Enter address" readonly="">
-                                        </div>
+                                        </div> -->
 
-                                        <div class="col-lg-6 mb-3">
+                                        <div class="col-lg-9 mb-3">
                                             <label class="control-label col-sm-5 "> Comments </label>
                                             <input type="text" class="form-control name" name="address" value=""
                                                 placeholder="Enter address" readonly="">
@@ -3114,14 +3185,14 @@
                                             value=""
                                             placeholder="Enter address" readonly="">
                                     </div>
-                                    <div class="col-lg-3 mb-3">
+                                    <!-- <div class="col-lg-3 mb-3">
                                         <label class="control-label col-sm-5 " style="width: fit-content; white-space: nowrap;"> Next Follow Up</label>
                                         <input type="date" class="form-control name" name="address"
                                             value=""
                                             placeholder="Enter address" readonly="">
-                                    </div>
+                                    </div> -->
 
-                                    <div class="col-lg-6 mb-3">
+                                    <div class="col-lg-9 mb-3">
                                         <label class="control-label col-sm-5 ">  Comments     </label>
                                         <input type="text" class="form-control name" name="address"
                                             value=""
