--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -275,7 +275,7 @@
                                         <div><i class="bi bi-arrow-right-circle-fill ms-3"></i></div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <!-- <div class="col-lg-4">
                                     <div class=" dashboard-btn  mb-3 d-flex justify-content-between align-items-center "
                                         style=" color:white !important; background-color: #8d8d8d !important">
                                         <div>
@@ -285,7 +285,7 @@
                                         </div>
                                         <div><i class="bi bi-arrow-right-circle-fill ms-3"></i></div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-lg-4">
                                     <div class=" dashboard-btn  mb-3 d-flex justify-content-between align-items-center "
                                         style=" color:white !important; background-color: #28a745!important;">
@@ -335,13 +335,13 @@
                                         style=" color:white !important; background-color: #ffc107 !important">
                                         <div>
                                             <a href="" class="text-white">
-                                                Deferred Student
+                                                Cas/T20 
                                             </a>
                                         </div>
                                         <div><i class="bi bi-arrow-right-circle-fill ms-3"></i></div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <!-- <div class="col-lg-4">
                                     <div class=" dashboard-btn  mb-3 d-flex justify-content-between align-items-center "
                                         style=" color:white !important; background-color: #dc3545 !important">
                                         <div>
@@ -351,8 +351,8 @@
                                         </div>
                                         <div><i class="bi bi-arrow-right-circle-fill ms-3"></i></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-4">
+                                </div> -->
+                                <div class="col-lg-12">
                                     <div class=" dashboard-btn  mb-3 d-flex justify-content-between align-items-center "
                                         style=" color:white !important; background-color: #000000 !important">
                                         <div>
