--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -493,13 +493,17 @@
 
                                 </div>
 
-                                <div class="blushed-card">
+                                <div class="blushed-card mb-3">
                                     <div class="table-responsive">
                                         <div id='calendar' class="dashboard-table-lg"></div>
                                     </div>
 
                                 </div>
-                                <!-- <div class="table-responsive">
+                              
+                            </div>
+
+                            <div class="card mt-3 py-4 px-lg-4 px-2">
+                                <div class="table-responsive ">
                                     <table id="today-appointment" class="table  nowrap border-0 " style="width:100%">
                                         <thead>
                                             <tr class="dt-head">
@@ -561,9 +565,9 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                </div> -->
+                                </div> 
                             </div>
-                            <!-- <div class="card  pb-4 px-lg-4 px-2 mt-3">
+                          <div class="card  pb-4 px-lg-4 px-2 mt-3">
                                 <div
                                     class="d-flex flex-md-row flex-column justify-content-between align-items-start py-3 mt-2">
                                     <h5 class="card-header px-0 bg-white border-bottom-0 py-0   mb-md-2 mb-3">All
@@ -643,7 +647,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                            </div> -->
+                            </div> 
                         </div>
 
                         <!-- Footer -->
