--- a/html/expense.html
+++ b/html/expense.html
@@ -338,7 +338,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-4  ms-auto mb-3 ">
+                                    <div class="col-lg-4 col-md-6  ms-auto mb-3 ">
                                         <div class="expens-total">
                                         
                                         <div class="d-flex align-items-center justify-content-between">
