--- a/html/booking.html
+++ b/html/booking.html
@@ -165,7 +165,7 @@
                     </li>
 
                     <!-- User Managementn -->
-                    <li class="menu-item active ">
+                    <li class="menu-item  ">
                         <a href="javascript:void(0)" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-copy"></i>
                             <div data-i18n="Extended UI">User Management</div>
