--- a/html/users-list.html
+++ b/html/users-list.html
@@ -523,7 +523,7 @@
                                     <div class="col-lg-6 mb-3">
                                         <label class="control-label mb-2 mt-2 col-sm-10 ">Interested Country <span
                                                 class="text-danger">*</span></label>
-                                        <select class="form-select">
+                                        <!-- <select class="form-select">
                                             <option value="AS" selected>
                                                 AUSTRALIA </option>
                                             <option value="CN">
@@ -540,7 +540,7 @@
                                                 UK </option>
                                             <option value="USA">
                                                 USA </option>
-                                        </select>
+                                        </select> -->
                                     </div>
                                     <div class="col-lg-6 lube-input mb-3">
                                         <label class="control-label mb-2 mt-2 col-sm-10 "> Session Looking <span
